--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>RGB Game</title>
+	<link rel="stylesheet" type="text/css" href="rgb.css">
+</head>
+<body>
 
+	<div id = "align">
+		<h3 >THE GREAT</h3>
+		<h1 id="colorDisplay">RGB(175,203,2)</h1>
+		<h3>GUESSING GAME</h3>
+	</div>
 
+	<div id="stripe">
+		<button id="newColor">New Color</button>
+		<span id="messageDisplay">Start Game</span>
+	</div>
 
-
-
+	<div id="container">
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div> 
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+	</div>
+	<script type="text/javascript" src="color game.js"></script>
+</body>
+</html>
