--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<div id="stripe">
 		<button id="newColor">New Color</button>
 		<span id="messageDisplay">Start Game</span>
+		<button id="easy">Easy</button>
+		<button id="hard" class="selected">Hard</button>
 	</div>
 
 	<div id="container">
