--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
 	<link rel="stylesheet" type="text/css" href="rgb.css">
 </head>
 <body>
+    <div style="margin: 0">
+		<div id = "align">
+			<h3 >THE GREAT</h3>
+			<h1 id="colorDisplay">RGB(175,203,2)</h1>
+			<h3>GUESSING GAME</h3>
+		</div>
 
-	<div id = "align">
-		<h3 >THE GREAT</h3>
-		<h1 id="colorDisplay">RGB(175,203,2)</h1>
-		<h3>GUESSING GAME</h3>
-	</div>
+		<div id="stripe">
+			<button id="newColor">New Color</button>
+			<span id="messageDisplay">Start Game</span>
+			<button id="easy">Easy</button>
+			<button id="hard" class="selected">Hard</button>
+		</div>
 
-	<div id="stripe">
-		<button id="newColor">New Color</button>
-		<span id="messageDisplay">Start Game</span>
-		<button id="easy">Easy</button>
-		<button id="hard" class="selected">Hard</button>
-	</div>
-
-	<div id="container">
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div> 
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
+		<div id="container">
+			<div style="margin-left : 5px" class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div> 
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+		</div>
 	</div>
 	<script type="text/javascript" src="color game.js"></script>
 </body>
